--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -7,6 +7,7 @@
     ID: <input type="text" name="id" placeholder="" value="{{_id if _id}}" readonly />
     Username: <input type="text" name="profilename" placeholder="" value="{{profilename if profilename}}" />
     Email: <input type="email" name="email" placeholder="Enter Email" value="{{email if email}}" />
+    Bio: <input type="text" name="bio" placeholder="Bio Here" value="{{bio if bio}}" />
     <input type="submit" value="submit" />
 </form>
 {% endblock %}
