--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,13 +2,16 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 <div style="border-radius: 1%; border:solid white; background-color: #303642;" class="container text-white">
-    <h2>Email: {{ email }}</h2>
-    <hr>
     <h2>Username: {{ profilename }}</h2>
     <hr>
+    <h2>Email: {{ email }}</h2>
+    <hr>
+    <h2>Bio</h2>
+    <hr>
+    <h3>{{ bio }}</h3>
     <a href="{{url_for('edit_profile')}}">Edit Profile</a>
 
-    <a href="{{url_for('view')}}">Admin Page</a>
+    <a href="{{url_for('view')}}">{{ admin }}</a>
 </div>
 <br>
 {% endblock %}
